--- a/rmcontest/rmcontest/static/style.css
+++ b/rmcontest/rmcontest/static/style.css
@@ -1,18 +1,25 @@
-body            { font-family: sans-serif; background: #eee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+#banner {
+    background:url('./images/banner.jpg');
+    width: 100%;
+    height: 100%;
+}
 
-.page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0; }
-.entries li     { margin: 0.8em 1.2em; }
-.entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
-.add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
-                  margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
-                  border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
+
+body                { font-family: sans-serif; background: black; }
+a, h1, h2           { color: #377ba8; }
+h1, h2              { font-family: "Source Code Pro", monospace; margin: 0; }
+h1                  { border-bottom: 2px solid #999; }
+h2                  { font-size: 1.2em; }
+
+.page               { margin: 0.8em auto; width: 60em; border: 2px solid #bab;
+                    padding: 2em; background: #ddffa0; }
+.entries            { list-style: none; margin: 0; padding: 0; }
+.entries li         { margin: 0.8em 1.2em; }
+.entries li h2      { margin-left: -1em; }
+.remove-entry       { font-size: 0.8em; border-bottom: 2px solid #ccc; }
+.remove-entry dl    { font-weight: bold; }
+.metanav            { text-align: right; font-size: 0.8em; padding: 0.3em;
+                    margin-bottom: 1em; background: black; }
+.flash              { background: #ae35F5; padding: 0.5em;
+                    border: 1px solid #aacbe2; }
+.error              { background: #f0d6d6; padding: 0.5em; }
