--- a/rmcontest/rmcontest/templates/layout.html
+++ b/rmcontest/rmcontest/templates/layout.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<title>Flaskr</title>
+<title>Rick and Morty's Programming Contest</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<div id="banner"></div>
 <div class=page>
-  <h1>Flaskr</h1>
+  <h1>Rick and Morty's Programming Contest</h1>
   <div class=metanav>
   {% if not session.logged_in %}
     <a href="{{ url_for('login') }}">log in</a>
@@ -10,6 +11,7 @@
     <a href="{{ url_for('logout') }}">log out</a>
   {% endif %}
   </div>
+   <a href="{{ url_for('problems') }}">Problems</a>
   {% for message in get_flashed_messages() %}
     <div class=flash>{{ message }}</div>
   {% endfor %}
