--- a/rmcontest/rmcontest/static/style.css
+++ b/rmcontest/rmcontest/static/style.css
@@ -1,4 +1,4 @@
-#banner {
+/*#banner {
     background:url('./images/banner.jpg');
     width: 100%;
     height: 100%;
@@ -22,4 +22,28 @@ h2                  { font-size: 1.2em; }
                     margin-bottom: 1em; background: black; }
 .flash              { background: #ae35F5; padding: 0.5em;
                     border: 1px solid #aacbe2; }
-.error              { background: #f0d6d6; padding: 0.5em; }
+.error              { background: #f0d6d6; padding: 0.5em; }*/
+
+body {
+    background: black;
+    font-family: Verdana;
+    font-size: 30px;
+    color: white;
+}
+
+
+.metanav {
+    text-align: center; 
+    font-family: "Comic-Sans";
+    font-size: 2em; 
+    padding: 0.3em;
+    margin-bottom: 1em; 
+    }
+
+#logo img {
+  max-width: 100%;
+  height: auto;
+  width: auto;
+  margin:auto;
+  display:block
+}
