--- a/rmcontest/rmcontest/templates/layout.html
+++ b/rmcontest/rmcontest/templates/layout.html
@@ -1,19 +1,18 @@
 <!doctype html>
 <title>Rick and Morty's Programming Contest</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-<div id="banner"></div>
-<div class=page>
-  <h1>Rick and Morty's Programming Contest</h1>
-  <div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
-  </div>
-   <a href="{{ url_for('problems') }}">Problems</a>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
-  {% block body %}{% endblock %}
+
+<body>
+<div id="logo">
+  <a>
+    <img src="../static/images/banner.jpg" alt="Rick and Morty Programming Contest">
+  </a>
 </div>
+</body>
+
+
+{% block body %}
+<div class=page>
+
+</div>
+{% endblock %}
