More problems added, more stylesheets added, added the form for submitting, added a template for processing that logic, adding the utilities page with embedded gists.

--- a/rmcontest/rmcontest/templates/index.html
+++ b/rmcontest/rmcontest/templates/index.html
@@ -22,7 +22,7 @@
 <ul>
   <li><a class="active" href="/">Home</a></li>
   <li><a href="/problems">Problems</a></li>
-  <li><a href="/rules">Rules</a></li>
+  <li><a href="/utilities">Utilities</a></li>
 </ul>
 </div>
 
@@ -34,5 +34,6 @@
 {% endblock %}
 
 {% block description %}
+<br>
 {% endblock %}
 
