--- a/rmcontest/rmcontest/static/style.css
+++ b/rmcontest/rmcontest/static/style.css
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400');
 
 
+h2 {
+  font-family: 'Source Code Pro', sans-serif;
+  display: block;
+  font-size: 26px;
+  text-shadow: 0px 0px 20px #ff0000;
+}
+
+h3 {
+  font-family: 'Source Code Pro', sans-serif;
+  font-size: 16px;
+  width: 60%;
+  color: white;
+
+}
+
 body {
   background: black;
   font-family: Verdana;
@@ -87,6 +102,14 @@ div.navbar li a:hover {
   color: white;
 }
 
+div.description a:link {
+  color:#2ecc7a;
+}
+
+div.description a:visited {
+  color:#0c6654;
+}
+
 .code {
   background: #1c1c1c;
   font-family: Monospace;
@@ -97,6 +120,40 @@ div.navbar li a:hover {
   align-content: center;
 }
 
+input[type="submit"] {
+    background: transparent;
+    border: 0;
+    font-family: inherit;
+    font-size: inherit;
+    margin: 0;
+    padding: 0;
+    color: #009900;
+    cursor: pointer;
+}
+
+/*input[type="text"] {
+  background: #0c0c0c;
+  border: 1;
+
+  color: #adadad;
+}*/
+
+input[type="text"] {
+    background: transparent;
+    color: #adadad;
+    border: 1px solid #666666;
+    background: #0c0c0c;
+    padding: 0 2px;
+    font-family: inherit;
+    font-size: inherit;
+    margin: 0;
+}
+
+hr {
+  height: 6px;
+  background: url(http://ibrahimjabbari.com/english/images/hr-11.png) repeat-x 0 0;
+    border: 0;
+}
 
 
 #logo img {
