--- a/rmcontest/rmcontest/templates/problem1.html
+++ b/rmcontest/rmcontest/templates/problem1.html
@@ -24,24 +24,39 @@
 The adventurers start at coordinates <code>(0,0)</code>. The total utility is found by summing the two utilities for the two galaxies. For example, if the two galaxies they visited were <code>(Alpha, (30,40), 200)</code> and (Bayta, (-10,40), 300), their total utility would be calculated as follows:
 </p>
 	<blockquote><pre><code><div class=code>
-	Alpha
-	distance between (0,0) and (30,40) -> 50
+	<u>Alpha</u>
+	Distance between (0,0) and (30,40) -> 50 (euclidean distance)
 	Benefit -> 200
 	Utility -> 200**2 - ((50 + 36) // 3) -> 40000 - 28 -> 39972
 
-	Bayta
-	distance between (30,40) and (-10,40) -> 40
+	<u>Bayta</u>
+	Distance between (30,40) and (-10,40) -> 40
 	Benefit -> 300
 	Utility -> 300**2 - ((40 + 36) // 3) -> 90000 - 25 -> 89975
 
-	Total Utility -> 39972 + 89975 -> 129947
+	<u>Total Utility</u> -> 39972 + 89975 -> 129947
 	</div></code></pre></blockquote>
 
 Here is their list of galaxies:
 <a href="/static/problems/problem1_input.txt">Galaxies</a>
+<br><br>
+<hr class="style12">
+<hr class="style12">
+<br>
+What is the maximum utility that they can possibly attain according to Rick's formula? 
+
+
+<form action="{{ url_for('process_answer') }}" method='post'>
+  <br>
+  <input type="hidden" name="problem_num" value="1">
+  Utility: <input type="text" name="answer"> <input type="submit" value="Submit">
+  
+</form> 
+
+<br>
+<div style="color:#102080">P.S. Don't forget that they visit two galaxies.</div>
 </div>
 
-What is the maximum utility that they can possibly attain according to Rick's formula? 
-P.S. Don't forget that they visit two galaxies.
+
 
 {% endblock %}
