--- a/rmcontest/rmcontest/templates/problem1.html
+++ b/rmcontest/rmcontest/templates/problem1.html
@@ -41,7 +41,6 @@ Here is their list of galaxies:
 <a href="/static/problems/problem1_input.txt">Galaxies</a>
 <br><br>
 <hr class="style12">
-<hr class="style12">
 <br>
 What is the maximum utility that they can possibly attain according to Rick's formula? 
 
@@ -49,7 +48,7 @@ What is the maximum utility that they can possibly attain according to Rick's fo
 <form action="{{ url_for('process_answer') }}" method='post'>
   <br>
   <input type="hidden" name="problem_num" value="1">
-  Utility: <input type="text" name="answer"> <input type="submit" value="Submit">
+  Answer: <input type="text" name="answer"> <input type="submit" value="Submit">
   
 </form> 
 
