--- a/rmcontest/rmcontest/templates/problem2.html
+++ b/rmcontest/rmcontest/templates/problem2.html
@@ -18,14 +18,14 @@ where T(n) is the nth triangle number (1,3,6,10,15,21...).
 <br>
 <br>
 <hr class="style12">
-<hr class="style12">
 <br>
 What is the 5823th shleeble number (mod 1000000)?
+
 
 <form action="{{ url_for('process_answer') }}" method='post'>
   <br>
   <input type="hidden" name="problem_num" value="2">
-  Utility: <input type="text" name="answer"> <input type="submit" value="Submit">
+  Answer: <input type="text" name="answer"> <input type="submit" value="Submit">
   
 </form> 
 
