--- a/rmcontest/rmcontest/templates/problem3.html
+++ b/rmcontest/rmcontest/templates/problem3.html
@@ -1,55 +1,89 @@
 {% extends "index.html" %}
 {% block body %}
 <div class=description>
-"Peace among worlds &lt;<b>buurrrrppp</b>&gt;", says Rick, fingers in the air, as he stumbles through the town square of the capital of the main world of his car battery's microverse (damn thing won't start again). He is greeted boorishly by Zeep, whom filled with ire, has waited patiently for the day Rick would dare step foot in his home again. "You no longer have power here, asshole!", Zeep shouts. He reaches into his pocket and presses a big red button on a remote, activating a strange dark monolith erected in the center of the square. The world starts to shake violently, tremors becoming more turbulent with each passing moment. Right when it seems all is about to collapse - all becomes still, and all becomes silent. Rick is unphased the whole time, until this very moment - something is different. In a frantic, time slows to a crawl. He reaches for his portal gun as fast as his alcoholic limbs will allow him, but he knows he won't be fast enough, for Zeep and his brethren have already fired all of their guns right at him. He has no choice but to fire the portal gun at himself, from inside of his pocket, knowing that there's a 96% chance that it will kill him. He pulls the trigger just in time, gets hurled through dimensions of time and space, and lands softly on a butt from the butt universe. He should have seen this coming.
+<p>
+"Peace among worlds &lt;<b>buurrrrppp</b>&gt;", says Rick, fingers in the air, as he stumbles through the town square of the capital of the main world of his car battery's microverse (damn thing won't start again). He is greeted boorishly by Zeep, whom filled with ire, has waited patiently for the day Rick would dare step foot in his home again. "You no longer have power here, asshole!", Zeep shouts. He reaches into his pocket and presses a big red button on a remote, activating a strange dark monolith erected in the center of the square. The world starts to shake violently, tremors becoming more turbulent with each passing moment. Right when it seems all is about to collapse - all becomes still, and all becomes silent. Rick is unphased the whole time, until this very moment - something is different. In a frantic, time slows to a crawl. He reaches for his portal gun as fast as his alcoholic limbs will allow him, but he knows he won't be fast enough, for Zeep and his brethren have already fired all of their guns right at him. He has no choice but to fire the portal gun at himself, from inside of his pocket, knowing that there's a 96% chance that it will kill him. He pulls the trigger just in time, gets hurled through dimensions of time and space, and lands softly on a large butt. He should have seen this coming.
+</p>
+<p>
+For a few moments after a universe dies, its "slot" in the space-time continuum is vacant. Since there are an infinite number of universes, there are also an infinite number dying at any given moment. Zeep's device took advantage of this, and transferred his universe from its previous slot (inside Rick's battery), to that of some previously existing (but independent) universe. Only a universe with a zlanp property in its cosmic signature can be switched out from one slot to another.
+</p>
 
-For a few moments after a universe dies, its "slot" in the space-time continuum is vacant. Since there are an infinite number of universes, there are also an infinite number dying at any given moment. Zeep's device took advantage of this, and transferred his universe from its previous slot (inside Rick's battery), to that of some previously existing (but independent) universe.
+<p>
+ Zeep's universe had this property, and thus Zeep was able to free his universe from the shackles of being confined to Rick's car battery, and instead into a slot amongst the full universes. 
+</p>
 
-Zeep's universe was special though
+<p>
+Luckily, Rick has 329 replacement car batteries. However, he doesn't want the same thing to happen again. How many of his batteries do NOT have the zlanp property in their cosmic signatures?
+</p>
 
-Only a universe with a zpolsfhsdf property in its cosmic signature can be switched out from one slot to another.
-
-Zeep's universe had this property, and thus Zeep was able to free his universe from the shackles of being confined to Rick's car battery, and instead into a slot amongst the full universes. 
-
-Luckily, Rick has 329 replacement car batteries. However, he doesn't want the same thing to happen again. How many of his batteries do NOT have the zpolsfhsdf property in their cosmic signatures?
-
-The cosmic signature read-outs show blorg and splin zones. The read-outs are represented by a two-dimensional grid of dashes ("-") for blorg zones and hashtags ("#") for splin zones. A cosmic signature has the zpolsfhsdf property only if there are four or more contiguous splin zones of at least size 5. A zone is contiguous with those directly above, below, to the left, and to the right of it (no diagonals).
-
---#----#---
-###------#-
-######-----
--##-####---
-######---##
-###-----###
-##------###
-#-----#----
-#---####---
------##----
-has five splin zones, only three of at least size 5
+<p>
+The cosmic signature read-outs show the distribution of zloonp zones. The read-outs are represented by a two-dimensional grid of dashes ("-") signifying no energy, and hashtags ("#") for zloonp zones. A cosmic signature has the zlanp property only if there are four or more contiguous zloonp zones of at least size 5. A zone is contiguous with those directly above, below, to the left, and to the right of it (no diagonals).
+</p>
+<blockquote><pre><code><div class=code>
+  --#----#---
+  ###------#-
+  ######-----
+  -##-####---
+  ######---##
+  ###-----###
+  ##------###
+  #-----#----
+  #---####---
+  -----##----
+  </div></code></pre></blockquote>
+  - has five zloonp zones, only three of them of at least size 5. Does NOT have zlanp property.
 
 
-#--------------
----###------##-
----###---------
----------------
------#######---
----------------
----#--------##-
---###--------##
---##---------##
--------------#-
-has six splin zones, four of them of at least size 5
+<blockquote><pre><code><div class=code>
+  #--------------
+  ---###------##-
+  ---###---------
+  ---------------
+  -----#######---
+  ---------------
+  ---#--------##-
+  --###--------##
+  --##---------##
+  -------------#-
+  </div></code></pre></blockquote>
 
----------------------------#
-----------------------------
----------------#------------
-----------------------------
-----------------#-----------
----------#------------------
------#----------------------
------##---------------#-----
-----------------------------
-----------------------------
-has 6 splin zones, all of them smaller than size 5
+  - has six zloonp zones, with four of them of at least size 5. Does have zlanp property.
+
+<blockquote><pre><code><div class=code>
+  ---------------------------#
+  ----------------------------
+  ---------------#------------
+  ----------------------------
+  ----------------#-----------
+  ---------#------------------
+  -----#----------------------
+  -----##---------------#-----
+  ----------------------------
+  ----------------------------
+
+</div></code></pre></blockquote>
+  - has 6 zloonp zones, all of them smaller than size 5. Does NOT have zlanp property.
+
+<br>
+<br>
+<hr class="style12">
+<br>
+
+<p>
+Here is a list of the cosmic readout signatures for the miniverses in Rick's 329 car batteries: <a href="/static/problems/problem3_input.txt">Cosmic Signatures</a>. Each signature is prepended by its width and height.
+</p>
+
+How many of his batteries do NOT have the zlanp property in their cosmic signatures (i.e. how many can he safely use)?
+
+
+<form action="{{ url_for('process_answer') }}" method='post'>
+  <br>
+  <input type="hidden" name="problem_num" value="3">
+  Answer: <input type="text" name="answer"> <input type="submit" value="Submit">
+  
+</form> 
+
+<br>
+
 </div>
 {% endblock %}
