Started properly integrating the db and made a login system that uses sessions.

--- a/rmcontest/rmcontest/static/style.css
+++ b/rmcontest/rmcontest/static/style.css
@@ -161,7 +161,7 @@ input[type="submit"] {
   color: #adadad;
 }*/
 
-input[type="text"] {
+input {
     background: transparent;
     color: #adadad;
     border: 1px solid #666666;
