--- a/rmcontest/rmcontest/templates/problems.html
+++ b/rmcontest/rmcontest/templates/problems.html
@@ -5,7 +5,7 @@
 	<div class=problems_list>
 		<div class=uncompleted_problems_list>
 			<ul>
-		    	{% for problem in uncompleted_problems %}
+		    	{% for problem in incomplete_problems %}
 		    	
 		    	
 		    	<li>
