--- a/rmcontest/rmcontest/templates/problem2.html
+++ b/rmcontest/rmcontest/templates/problem2.html
@@ -1,37 +1,15 @@
-{% extends "index.html" %}
-
+{% extends "problem.html" %}
 {% block description %}
 <div class=description>
-<p>
-Rick is trying to calibrate his portal gun to get him and Morty to Alpha-Betrium, so that he can collect some money that Magma-Q owes him from an old bet (41 shmeckles is no petty change, thats $6068 USD!). His dial isn't working properly, so he has to configure the destination manually. To do this, he needs to generate the 5823th shleeble number. He knows the first few shleeble numbers (counting from 1) are 0, 1, and 6. He can't remember the rest..
-</p>
-
-The formula for the nth shleeble number shleeble(n) = 
-
-<blockquote><pre><code><div class=code>
-	Shleeble(n) = (Shleeble(n-1) - Shleeble(n+1)) / (T(n) * 11)
- </div></code></pre></blockquote>
-
-where T(n) is the nth triangle number (1,3,6,10,15,21...). 
-
-
-<br>
-<br>
-<hr class="style12">
-<br>
-What is the 5823th shleeble number (mod 1000000)?
-
-
-<form action="{{ url_for('process_answer') }}" method='post'>
-  <br>
-  <input type="hidden" name="problem_num" value="2">
-  Answer: <input type="text" name="answer"> <input type="submit" value="Submit">
-  
-</form> 
-
+Rick has failed to turn himself into a pickle in time to escape the dreaded family therapy session scheduled for today. His backup B.S. is that he is way too busy with some super important calculations, and can't go anywhere until they get done. You must abolish this B.S. and help keep the Sanchezes together. find the sum of all numbers from 1 to 1,000,000 (inclusive) that are divisible by the sum of their digits. For example, the sum of the digits of 126 is 1 + 2 + 6 = 9, and 126 is divisible by 9. 
 </div>
+{% endblock %}
 
+{% block answer_form %}
+{{ super() }}
+{% endblock %}
 
-
+{% block hint %}
 
 {% endblock %}
+
