--- a/rmcontest/rmcontest/templates/home.html
+++ b/rmcontest/rmcontest/templates/home.html
@@ -21,10 +21,10 @@
 {% else %}
 <form action="{{url_for('logout')}}" method=post>
   <dl>
-    <dd><input type=submit value=logout>
+<dd><input type=submit value=logout>
   </dl>
 </form>
-Welcome to the contest, {{name}}!
+The contest has begun?
 
 
 {% endif %}
