--- a/rmcontest/rmcontest/templates/problem2.html
+++ b/rmcontest/rmcontest/templates/problem2.html
@@ -1,7 +1,11 @@
 {% extends "problem.html" %}
 {% block description %}
 <div class=description>
-Rick has failed to turn himself into a pickle in time to escape the dreaded family therapy session scheduled for today. His backup B.S. is that he is way too busy with some super important calculations, and can't go anywhere until they get done. You must abolish this B.S. and help keep the Sanchezes together. find the sum of all numbers from 1 to 1,000,000 (inclusive) that are divisible by the sum of their digits. For example, the sum of the digits of 126 is 1 + 2 + 6 = 9, and 126 is divisible by 9. 
+Rick has failed to turn himself into a pickle in time to escape the dreaded family therapy session scheduled for today. His backup B.S. is that he is way too busy with some super important calculations, and can't go anywhere until they get done. You must abolish this B.S. and help keep the Sanchezes together. 
+<p>
+Find the <hlb>sum</hlb> of all numbers from <hlp>1</hlp> to <hlp>1,000,000</hlp> (inclusive) that are <hlb>divisible by the sum of their digits</hlb>. 
+<p>
+For example, the sum of the digits of <hlg><code>126</code></hlg> is <code><hlg>1</hlg> + <hlg>2</hlg> + <hlg>6</hlg> = <hlg>9</hlg></code>, and <code><hlg>126</hlg></code> is divisible by <code><hlg>9</hlg></code>. 
 </div>
 {% endblock %}
 
