--- a/rmcontest/rmcontest/templates/problem7.html
+++ b/rmcontest/rmcontest/templates/problem7.html
@@ -70,7 +70,7 @@ The cosmic signature read-outs show the distribution of zloonp zones. The read-o
 <br>
 
 <p>
-Here is a list of the cosmic readout signatures for the miniverses in Rick's 329 car batteries: <a href="/static/problems/problem3_input.txt">Cosmic Signatures</a>. Each signature is prepended by its width and height.
+Here is a list of the cosmic readout signatures for the miniverses in Rick's 329 car batteries: <a href="{{input_file}}">Cosmic Signatures</a>. Each signature is prepended by its width and height.
 </p>
 
 How many of his batteries do NOT have the zlanp property in their cosmic signatures (i.e. how many can he safely use)?
