--- a/rmcontest/rmcontest/templates/problem1.html
+++ b/rmcontest/rmcontest/templates/problem1.html
@@ -1,10 +1,16 @@
 {% extends "problem.html" %}
 {% block description %}
 <div class=description>
-Summer decided to become a CS major in college, in the hopes of one day making an AI that can be smarter than Rick. However, before she can do all that, she's got a lot of work that she's got to do this semester. She'd rather be researching the optimization and parallelization of zeta-tree operations, but alas, her homework calls. Luckily for her, its not much harder than reasoning about improving state of the art data structures. Ahem... that is, luckily for you. She hands you her assignment:
+Summer decided to become a CS major in college, in the hopes of one day making an AI that can be smarter than Rick. However, before she can do all that, she's got a lot of work that she's got to do this semester. She'd rather be researching the optimization and parallelization of zeta-tree operations, but alas, her homework calls. 
+<p>
+Luckily for her, its not much harder than reasoning about improving state of the art data structures. Ahem... that is, luckily for you. She hands you her assignment:
 
-Given a balanced string of brackets, what is the maximum nesting depth found within the string? For the example given, the answer is 4.
-&lt;&lt;&gt;&lt;&gt;&lt;&gt;&lt;&lt;&lt;&gt;&gt;&gt;&gt;
+<p>
+Given a <a href={{input_file}}>balanced string of brackets</a>, what is the maximum nesting depth found within the string?
+<p>
+For example, the string of brackets, <hlb><code>&lt;&lt;&gt;&lt;&gt;&lt;&gt;&lt;&lt;&lt;&gt;&gt;&gt;&gt;</code></hlb>, reaches 4 levels of nesting. <br>
+
+
 </div>
 {% endblock %}
 
